# sulfur

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux.yml  main.yml
src/: main.rs
src/lib/: mod.rs
src/lib/cli/: cli.rs  mod.rs
src/lib/db/: conn.rs  create.rs  insert.rs  mod.rs  query.rs  update.rs
src/lib/default/: default.rs
src/lib/file/: compression.rs  decompression.rs  mod.rs
src/lib/repo/: file.rs  mod.rs  sync.rs  update_repod.rs
