[package]
name = "sulfur"
version = "0.1.0"
authors = ["Rheydskey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2", features = ["full"] }
async-std = "1.6.5"

serde =  {version = "1.0.117", features = ["derive"]}
toml = "0.5"

users = "0.11"

structopt = "0.3.20"
indicatif = "0.15.0"

rusqlite = "0.24.1"

zstd = "0.5.3+zstd.1.4.5"

ruzstd = "0.2.1"