[package]
name = "sulfur"
version = "0.1.0"
authors = ["Rheydskey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.9"
async-std = "1.9.0"
futures = "0.3.8"

serde =  { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"

runas = "0.2.1"
walkdir = "2.3.1"
users = "0.11.0"

structopt = "0.3.21"
indicatif = "0.15.0"

sqlx = { version = "0.4.1", features = ["runtime-async-std-native-tls", "sqlite"] }

zstd = "0.5.3"
ruzstd = "0.2.2"
